=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.10-dev

Added '-httpd_conf_extra <filename>' configuration option to
allow a file of server config directives to be inherited
in addition to the server's own httpd.conf file (or the one
specified by -httpd_conf).  [Ken and Stas]

Generated Listen directive now listen on 0.0.0.0 to force using
IPv4 addresses on IPv6 systems until LWP supports IPv6. [Gozer]

improved docs [David Wheeler <david@kineticode.com>]

Add a virtual method Apache::TestRun::pre_configure, and fix the
documentation to say that subclasses must not forget to run the
superclass' method. [Stas]

Apache::TestRunPerl now performs an early check whether it can load
the right mod_perl environment. [William McKee <william@knowmad.com>,
Stas]

$ENV{APACHE_TEST_NO_STICKY_PREFERENCES}, if true, will both suppress
generation of persistent preferences and ignore any that already exist.
[Geoffrey Young]

make the project's test suite relocatable, handling the case where
after Apache-Test configuration was created and not cleaned up before
the directory was moved. This is especially important for those cases
where users try to run 'make test' as root from /root, A-T tells them
that they can't do that (because of the perms) and suggests to try
again, afer moving the whole project under /tmp or similar. [Stas]

When running as 'root' make the client side drop the root permissions
and run with the same permissions as the server side
(e.g. nobody). This is needed in case the client side creates any
files after the initial check (during server side startup and beyond),
so that the server side could read/write them. [Stas]

t_server_log_error_is_expected t_server_log_warn_is_expected
t_client_log_error_is_expected t_client_log_warn_is_expected
now support an optional argument, suggesting how many entries
to expect [Stas]



=item 1.09 - March 8, 2004

remove the dependency on APR::UUID (i.e. mod_perl 2.0) in the